Backend Added the function of uploading user avatar. Added documentation.
